--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwbe5nsyGfAq792yI/lneP",
+      "authorship_tag": "ABX9TyPLfk5kp7DlY7V/ooWppDuS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -387,7 +387,8 @@
         "  if found:\n",
         "      print(f\"'{user_input}' found in the CSV.\")\n",
         "  else:\n",
-        "      print(f\"'{user_input}' not found in the CSV.\")\n"
+        "      print(f\"'{user_input}' not found in the CSV.\")\n",
+        "      data.append(user_input)\n"
       ],
       "metadata": {
         "id": "aECTFqj5DI4J"
@@ -466,22 +467,22 @@
     {
       "cell_type": "code",
       "source": [
-        "result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"indu@gmail.com\"}]})"
+        "result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"indu9999@gmail.com\"}]})"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CKXeyCqxBdvC",
-        "outputId": "2f4fe622-5fa2-4dd4-ae0e-d7b56b3afc1e"
+        "outputId": "b222cd69-f883-4363-ad34-dd57ceeb8372"
       },
-      "execution_count": 64,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "'indu@gmail.com' found in the CSV.\n"
+            "'indu9999@gmail.com' not found in the CSV.\n"
           ]
         }
       ]
@@ -492,11 +493,11 @@
         "result"
       ],
       "metadata": {
-        "id": "qH5A8KCXB-oP",
-        "outputId": "cc967df3-6fdd-4015-a255-d592c27af9bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qH5A8KCXB-oP",
+        "outputId": "cc967df3-6fdd-4015-a255-d592c27af9bc"
       },
       "execution_count": 62,
       "outputs": [
