--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLfk5kp7DlY7V/ooWppDuS",
+      "authorship_tag": "ABX9TyOiJcRQV8UX+pPwWMQerXgV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -291,51 +291,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCqR9fMxH6ye2rnvkiNS7vFeRPPasTCkiU\"\n",
-        "\n",
-        "\n",
-        "# call gemini 2.5 flash model using langchain\n",
-        "from langchain_google_genai import ChatGoogleGenerativeAI\n",
-        "\n",
-        "llm = ChatGoogleGenerativeAI(\n",
-        "    model=\"gemini-2.0-flash\",\n",
-        "    # other params...\n",
-        ")\n",
-        "\n",
-        "from langchain_core.messages import HumanMessage, SystemMessage\n",
-        "messages = [\n",
-        "    SystemMessage(\n",
-        "        content=\"Hi! I am Bob, Your helpcare assistance, How can i assist you today?\"\n",
-        "    )\n",
-        "]\n",
-        "\n",
-        "#AI Assisted Cahtbot for Patients\n",
-        "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
-        "user_input = input(\"Hi! I am Bob, Your helpcare assistance, How can i assist you today?\")\n",
-        "count = 0\n",
-        "while user_input != 'No'and user_input != 'Nope':\n",
-        "    messages.append(HumanMessage(content=user_input))\n",
-        "    output = llm.invoke(messages)\n",
-        "    messages.append(AIMessage(content=output.content))\n",
-        "    print(\"------------------Updating the Message List--------------------\")\n",
-        "    print(output.content)\n",
-        "    print(\"message List is\", messages)\n",
-        "    count += 1\n",
-        "    if(count==1):\n",
-        "      user_input = input(\"Please share your PhoneNumber/ email ID\")\n",
-        "    else:\n",
-        "      user_input = input(\"Is there anything i could help you with\")"
-      ],
-      "metadata": {
-        "id": "dO-ChMrAvc_j"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "\n",
         "#reading content form URL\n",
         "from langchain_community.document_loaders import CSVLoader\n",
@@ -483,6 +438,76 @@
           "name": "stdout",
           "text": [
             "'indu9999@gmail.com' not found in the CSV.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCqR9fMxH6ye2rnvkiNS7vFeRPPasTCkiU\"\n",
+        "\n",
+        "\n",
+        "# call gemini 2.5 flash model using langchain\n",
+        "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+        "\n",
+        "llm = ChatGoogleGenerativeAI(\n",
+        "    model=\"gemini-2.0-flash\",\n",
+        "    # other params...\n",
+        ")\n",
+        "\n",
+        "from langchain_core.messages import HumanMessage, SystemMessage\n",
+        "messages = [\n",
+        "    SystemMessage(\n",
+        "        content=\"Hi! I am Bob, Your helpcare assistance, How can i assist you today?\"\n",
+        "    )\n",
+        "]\n",
+        "\n",
+        "#AI Assisted Cahtbot for Patients\n",
+        "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
+        "user_input = input(\"Hi! I am Bob, Your helpcare assistance, How can i assist you today?\")\n",
+        "count = 0\n",
+        "while user_input != 'No'and user_input != 'Nope':\n",
+        "    messages.append(HumanMessage(content=user_input))\n",
+        "    output = llm.invoke(messages)\n",
+        "    messages.append(AIMessage(content=output.content))\n",
+        "    print(\"------------------Updating the Message List--------------------\")\n",
+        "    print(output.content)\n",
+        "    print(\"message List is\", messages)\n",
+        "    count += 1\n",
+        "    if(count==1):\n",
+        "      user_input = input(\"Please share your PhoneNumber/ email ID\")\n",
+        "    else:\n",
+        "      print(user_input)\n",
+        "      print(graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":user_input}]}))\n",
+        "      user_input = input(\"Is there anything i could help you with\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WNgs8DUkR_nM",
+        "outputId": "391dbeef-e7b8-43af-c915-65646cac2314"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hi! I am Bob, Your helpcare assistance, How can i assist you today?Hi i am Indu\n",
+            "------------------Updating the Message List--------------------\n",
+            "Hi Indu, nice to meet you! How can I assist you today?\n",
+            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi i am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={})]\n",
+            "Please share your PhoneNumber/ email IDindu@gmail.com\n",
+            "------------------Updating the Message List--------------------\n",
+            "Okay, thanks for sharing your email address. Is there anything specific you need help with related to your email or anything else?\n",
+            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi i am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='indu@gmail.com', additional_kwargs={}, response_metadata={}), AIMessage(content='Okay, thanks for sharing your email address. Is there anything specific you need help with related to your email or anything else?', additional_kwargs={}, response_metadata={})]\n",
+            "indu@gmail.com\n",
+            "'indu@gmail.com' found in the CSV.\n",
+            "{'messages': [HumanMessage(content='indu@gmail.com', additional_kwargs={}, response_metadata={}, id='b4d8a7a8-7689-4a06-9120-76c1436b2f0a'), AIMessage(content='Patient_details', additional_kwargs={}, response_metadata={}, id='29559d76-d247-4461-9e71-1c1fc86e3f81')], 'user_input': 'indu@gmail.com', 'message_type': 'Patient_details'}\n",
+            "Is there anything i could help you withNo\n"
           ]
         }
       ]
