--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiJcRQV8UX+pPwWMQerXgV",
+      "authorship_tag": "ABX9TyMb0cgwIyjGXm6cNBZ5Me7r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,14 +317,14 @@
         "          break\n",
         "\n",
         "  if found:\n",
-        "      print(f\"'{user_input}' found in the CSV.\")\n",
+        "      print(f\"'{user_input}' , you are existing patient with us.\")\n",
         "  else:\n",
-        "      print(f\"'{user_input}' not found in the CSV.\")\n"
+        "      print(f\"'{user_input}' , are you new ? Could you please provide with your details.\")\n"
       ],
       "metadata": {
         "id": "JS7v1HC4Af-T"
       },
-      "execution_count": 47,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -348,7 +348,7 @@
       "metadata": {
         "id": "aECTFqj5DI4J"
       },
-      "execution_count": 68,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -366,7 +366,7 @@
       "metadata": {
         "id": "FKkNMrP2A28L"
       },
-      "execution_count": 59,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -379,9 +379,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yZ-sDabCBCKr",
-        "outputId": "5387be4e-c88f-4815-fd37-6cb10ad81f88"
+        "outputId": "755285df-d03f-465f-f71a-191348ff6501"
       },
-      "execution_count": 60,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,15 +429,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CKXeyCqxBdvC",
-        "outputId": "d074d1fb-b8b0-441e-9ce3-c123f7b7e50d"
+        "outputId": "4450cc06-e826-4fce-fd0f-5ddca2299e16"
       },
-      "execution_count": 69,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "'indu9999@gmail.com' not found in the CSV.\n"
+            "'indu9999@gmail.com' , are you new ? Could you please provide with your details.\n"
           ]
         }
       ]
@@ -471,16 +471,17 @@
         "while user_input != 'No'and user_input != 'Nope':\n",
         "    messages.append(HumanMessage(content=user_input))\n",
         "    output = llm.invoke(messages)\n",
-        "    messages.append(AIMessage(content=output.content))\n",
+        "\n",
         "    print(\"------------------Updating the Message List--------------------\")\n",
         "    print(output.content)\n",
-        "    print(\"message List is\", messages)\n",
+        "    #print(\"message List is\", messages)\n",
         "    count += 1\n",
         "    if(count==1):\n",
+        "      messages.append(AIMessage(content=output.content))\n",
         "      user_input = input(\"Please share your PhoneNumber/ email ID\")\n",
         "    else:\n",
-        "      print(user_input)\n",
-        "      print(graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":user_input}]}))\n",
+        "      result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":user_input}]})\n",
+        "      print(result[\"messages\"][-1])\n",
         "      user_input = input(\"Is there anything i could help you with\")"
       ],
       "metadata": {
@@ -488,56 +489,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WNgs8DUkR_nM",
-        "outputId": "391dbeef-e7b8-43af-c915-65646cac2314"
+        "outputId": "7685b5c4-c768-4bd0-9af6-fbac07240976"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Hi! I am Bob, Your helpcare assistance, How can i assist you today?Hi i am Indu\n",
+            "Hi! I am Bob, Your helpcare assistance, How can i assist you today?Hi I am Indu\n",
             "------------------Updating the Message List--------------------\n",
-            "Hi Indu, nice to meet you! How can I assist you today?\n",
-            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi i am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={})]\n",
-            "Please share your PhoneNumber/ email IDindu@gmail.com\n",
-            "------------------Updating the Message List--------------------\n",
-            "Okay, thanks for sharing your email address. Is there anything specific you need help with related to your email or anything else?\n",
-            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi i am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='indu@gmail.com', additional_kwargs={}, response_metadata={}), AIMessage(content='Okay, thanks for sharing your email address. Is there anything specific you need help with related to your email or anything else?', additional_kwargs={}, response_metadata={})]\n",
-            "indu@gmail.com\n",
-            "'indu@gmail.com' found in the CSV.\n",
-            "{'messages': [HumanMessage(content='indu@gmail.com', additional_kwargs={}, response_metadata={}, id='b4d8a7a8-7689-4a06-9120-76c1436b2f0a'), AIMessage(content='Patient_details', additional_kwargs={}, response_metadata={}, id='29559d76-d247-4461-9e71-1c1fc86e3f81')], 'user_input': 'indu@gmail.com', 'message_type': 'Patient_details'}\n",
-            "Is there anything i could help you withNo\n"
+            "Hi Indu! It's nice to meet you. How can I help you today?\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "result"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qH5A8KCXB-oP",
-        "outputId": "cc967df3-6fdd-4015-a255-d592c27af9bc"
-      },
-      "execution_count": 62,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'messages': [HumanMessage(content='indu@gmail.com', additional_kwargs={}, response_metadata={}, id='e42975bb-213d-46fc-a4f9-bb544e367cf2'),\n",
-              "  AIMessage(content='Patient_details', additional_kwargs={}, response_metadata={}, id='7d3f89ba-285c-4750-85bc-425cade93a76')],\n",
-              " 'user_input': 'indu@gmail.com',\n",
-              " 'message_type': 'Patient_details'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 62
         }
       ]
     }
