--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMb0cgwIyjGXm6cNBZ5Me7r",
+      "authorship_tag": "ABX9TyNJpxxhMc1XJFpEysU1eJ0o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "JS7v1HC4Af-T"
       },
-      "execution_count": 75,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -340,15 +340,16 @@
         "          break\n",
         "\n",
         "  if found:\n",
-        "      print(f\"'{user_input}' found in the CSV.\")\n",
+        "      return \"'{user_input}' found in the CSV.\"\n",
         "  else:\n",
-        "      print(f\"'{user_input}' not found in the CSV.\")\n",
-        "      data.append(user_input)\n"
+        "      data.append(user_input)\n",
+        "      return \"'{user_input}' not found in the CSV.\"\n",
+        "\n"
       ],
       "metadata": {
         "id": "aECTFqj5DI4J"
       },
-      "execution_count": 76,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -366,7 +367,7 @@
       "metadata": {
         "id": "FKkNMrP2A28L"
       },
-      "execution_count": 77,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -379,9 +380,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yZ-sDabCBCKr",
-        "outputId": "755285df-d03f-465f-f71a-191348ff6501"
+        "outputId": "11e19c02-2fa9-4684-a22f-c8a5b145498d"
       },
-      "execution_count": 78,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,9 +430,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CKXeyCqxBdvC",
-        "outputId": "4450cc06-e826-4fce-fd0f-5ddca2299e16"
+        "outputId": "d595b533-c908-40bd-990c-bfa779ce2280"
       },
-      "execution_count": 79,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,14 +472,12 @@
         "while user_input != 'No'and user_input != 'Nope':\n",
         "    messages.append(HumanMessage(content=user_input))\n",
         "    output = llm.invoke(messages)\n",
-        "\n",
+        "    messages.append(AIMessage(content=output.content))\n",
         "    print(\"------------------Updating the Message List--------------------\")\n",
-        "    print(output.content)\n",
         "    #print(\"message List is\", messages)\n",
         "    count += 1\n",
         "    if(count==1):\n",
-        "      messages.append(AIMessage(content=output.content))\n",
-        "      user_input = input(\"Please share your PhoneNumber/ email ID\")\n",
+        "      user_input = input(output.content +\",\\nPlease share your PhoneNumber/ email ID\")\n",
         "    else:\n",
         "      result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":user_input}]})\n",
         "      print(result[\"messages\"][-1])\n",
@@ -489,7 +488,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WNgs8DUkR_nM",
-        "outputId": "7685b5c4-c768-4bd0-9af6-fbac07240976"
+        "outputId": "81bf0651-568b-40d3-b12b-0e708d366355"
       },
       "execution_count": null,
       "outputs": [
@@ -498,8 +497,7 @@
           "name": "stdout",
           "text": [
             "Hi! I am Bob, Your helpcare assistance, How can i assist you today?Hi I am Indu\n",
-            "------------------Updating the Message List--------------------\n",
-            "Hi Indu! It's nice to meet you. How can I help you today?\n"
+            "------------------Updating the Message List--------------------\n"
           ]
         }
       ]
