--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSIrmL3vdS++UZRGzHmBfP",
+      "authorship_tag": "ABX9TyOpuEPKiepdbWnji1XAhrrj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -324,31 +324,30 @@
       "metadata": {
         "id": "JS7v1HC4Af-T"
       },
-      "execution_count": 101,
+      "execution_count": 102,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#reading content form URL\n",
+        "from langchain_community.document_loaders import CSVLoader\n",
+        "data = [\n",
+        "    ['Name', 'Age', 'City']\n",
+        "]\n",
+        "\n",
+        "\n",
         "# get_patient_details tool\n",
         "def insert_patient_details(state):\n",
         "  user_input = state[\"user_input\"]\n",
-        "  found = False\n",
-        "  for doc in data:\n",
-        "      if user_input in doc.page_content:\n",
-        "          found = True\n",
-        "          break\n",
-        "\n",
-        "  if found:\n",
-        "      return \"'{user_input}' , you are existing patient with us.\"\n",
-        "  else:\n",
-        "      data.append(user_input)\n",
-        "      return \"'{user_input}' , are you new ? Could you please share you Name, phoneNumber and EmailDetails.\"\n"
+        "  with open('/content/Patient_Details.csv', 'w', newline='') as file:\n",
+        "    writer = CSVLoader.writer(file)\n",
+        "    writer.writerows(data)\n"
       ],
       "metadata": {
         "id": "qkR5YHAKZs-K"
       },
-      "execution_count": null,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -373,7 +372,7 @@
       "metadata": {
         "id": "aECTFqj5DI4J"
       },
-      "execution_count": 99,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -383,37 +382,18 @@
         "graph_bulider.add_node(\"classifer\",router_message)\n",
         "graph_bulider.add_edge(START,\"classifer\")\n",
         "graph_bulider.add_node(\"Patient_details\",get_patient_details)\n",
-        "graph_bulider.add_node(\"Diagnostic_tool\",get_diagnostic_report)\n",
+        "graph_bulider.add_node(\"Diagnostic_tool\",get_patient_details)\n",
         "graph_bulider.add_conditional_edges(\"classifer\", lambda state:state.get(\"message_type\"),{\"Patient_details\":\"Patient_details\", \"Diagnostic_tool\":\"Diagnostic_tool\"})\n",
         "\n",
-        "graph_bulider.add_edge(\"Diagnostic_tool\",get_diagnostic_report)\n",
         "graph_bulider.add_edge(\"Diagnostic_tool\",END)\n",
+        "graph_bulider.add_edge(\"Patient_details\",END)\n",
         "graph = graph_bulider.compile()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 321
-        },
-        "id": "FKkNMrP2A28L",
-        "outputId": "ef93364e-fb52-42d1-f448-537d32199211"
+        "id": "FKkNMrP2A28L"
       },
-      "execution_count": 98,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "Found edge ending at unknown node `<function get_diagnostic_report at 0x7cda66d30b80>`",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-565440911.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mgraph_bulider\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Diagnostic_tool\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mget_diagnostic_report\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mgraph_bulider\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Diagnostic_tool\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mEND\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mgraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph_bulider\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langgraph/graph/state.py\u001b[0m in \u001b[0;36mcompile\u001b[0;34m(self, checkpointer, cache, store, interrupt_before, interrupt_after, debug, name)\u001b[0m\n\u001b[1;32m    827\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    828\u001b[0m         \u001b[0;31m# validate the graph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 829\u001b[0;31m         self.validate(\n\u001b[0m\u001b[1;32m    830\u001b[0m             interrupt=(\n\u001b[1;32m    831\u001b[0m                 \u001b[0;34m(\u001b[0m\u001b[0minterrupt_before\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0minterrupt_before\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"*\"\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0minterrupt_after\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langgraph/graph/state.py\u001b[0m in \u001b[0;36mvalidate\u001b[0;34m(self, interrupt)\u001b[0m\n\u001b[1;32m    782\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mall_targets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    783\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mEND\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 784\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Found edge ending at unknown node `{target}`\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    785\u001b[0m         \u001b[0;31m# validate interrupts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    786\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Found edge ending at unknown node `<function get_diagnostic_report at 0x7cda66d30b80>`"
-          ]
-        }
-      ]
+      "execution_count": 107,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -425,35 +405,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yZ-sDabCBCKr",
-        "outputId": "11e19c02-2fa9-4684-a22f-c8a5b145498d"
+        "outputId": "61931625-6791-42a5-afa2-71b3a0bba1e2"
       },
-      "execution_count": 90,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   +-----------+     \n",
-            "   | __start__ |     \n",
-            "   +-----------+     \n",
-            "          *          \n",
-            "          *          \n",
-            "          *          \n",
-            "   +-----------+     \n",
-            "   | classifer |     \n",
-            "   +-----------+     \n",
-            "          .          \n",
-            "          .          \n",
-            "          .          \n",
-            "+-----------------+  \n",
-            "| Patient_details |  \n",
-            "+-----------------+  \n",
-            "          *          \n",
-            "          *          \n",
-            "          *          \n",
-            "    +---------+      \n",
-            "    | __end__ |      \n",
-            "    +---------+      \n"
+            "                  +-----------+                    \n",
+            "                  | __start__ |                    \n",
+            "                  +-----------+                    \n",
+            "                        *                          \n",
+            "                        *                          \n",
+            "                        *                          \n",
+            "                  +-----------+                    \n",
+            "                  | classifer |                    \n",
+            "                  +-----------+                    \n",
+            "                ...            ...                 \n",
+            "              ..                  ..               \n",
+            "            ..                      ..             \n",
+            "+-----------------+           +-----------------+  \n",
+            "| Diagnostic_tool |           | Patient_details |  \n",
+            "+-----------------+           +-----------------+  \n",
+            "                ***            ***                 \n",
+            "                   **        **                    \n",
+            "                     **    **                      \n",
+            "                   +---------+                     \n",
+            "                   | __end__ |                     \n",
+            "                   +---------+                     \n"
           ]
         }
       ]
