--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLuOlBXG7vsplwpffv5++Z",
+      "authorship_tag": "ABX9TyMrINRBn0YKfx7fo2aruD2f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -318,7 +318,7 @@
         "\n",
         "  if found:\n",
         "\n",
-        "      message = \"{user_input}, you are existing patient with us.\"\n",
+        "      message = user_input+\", you are existing patient with us.\"\n",
         "      return {\"messages\":[{\"role\":\"assistant\",\"content\":message}]}\n",
         "  else:\n",
         "      insert_patient_details(user_input)\n",
@@ -327,7 +327,7 @@
       "metadata": {
         "id": "JS7v1HC4Af-T"
       },
-      "execution_count": 120,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -485,7 +485,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WNgs8DUkR_nM",
-        "outputId": "28bb4400-237e-4275-c37e-eff278d87880"
+        "outputId": "075cdc28-63f7-4b62-ef0c-175686834f54"
       },
       "execution_count": null,
       "outputs": [
@@ -493,12 +493,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hi! I am Bob, Your helpcare assistance, How can i assist you today?Hi I am Indu\n",
+            "Hi! I am Bob, Your helpcare assistance, How can i assist you today?Indu\n",
             "------------------Updating the Message List--------------------\n",
-            "Hi Indu, it's nice to meet you! How can I help you today?,\n",
+            "Hi Indu! How can I help you today?,\n",
             "Please share your PhoneNumber/ email IDindu@gmail.com\n",
             "------------------Updating the Message List--------------------\n",
-            "content=\"'{user_input}', you are existing patient with us.\" additional_kwargs={} response_metadata={} id='741a6357-b4ab-49c3-af00-9227eef2e9d9'\n"
+            "content=\"'{user_input}', you are existing patient with us.\" additional_kwargs={} response_metadata={} id='df7d82f6-1d6b-4452-a855-7c699d0aac8a'\n"
           ]
         }
       ]
