--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyiCNe72MNr/T5T23voKtE",
+      "authorship_tag": "ABX9TyP13kamyuSSqb9hvW1eUGbi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -339,7 +339,7 @@
         "    found = state[\"user_input\"]\n",
         "    if found:\n",
         "        print(\"found\")\n",
-        "        return \"get_diagnostic_report('found')\"\n",
+        "        return \"get_diagnostic_report\"\n",
         "    else:\n",
         "        print(\"not found\")\n",
         "        return \"get_patient_details\""
