--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvyApZ7AHG+yan5BlfbUL3",
+      "authorship_tag": "ABX9TyP/lVJZ2TkbzkzOBPaBzRoC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,11 +265,11 @@
         "pip install faiss-cpu"
       ],
       "metadata": {
-        "id": "ZVMK44YnkzEN",
-        "outputId": "c176fc5f-e7e1-4d14-e8f1-bfb3b03b43bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZVMK44YnkzEN",
+        "outputId": "c176fc5f-e7e1-4d14-e8f1-bfb3b03b43bf"
       },
       "execution_count": 56,
       "outputs": [
@@ -389,8 +389,6 @@
         "\n",
         "#reading content form URL\n",
         "from langchain_community.document_loaders import CSVLoader\n",
-        "#reading content form URL\n",
-        "from langchain_community.document_loaders import PyPDFLoader\n",
         "\n",
         "patientloader = CSVLoader(file_path='/content/Patient_Details.csv')\n",
         "data = patientloader.load()\n"
@@ -448,6 +446,9 @@
         "from langchain_huggingface import HuggingFaceEmbeddings\n",
         "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
         "\n",
+        "#reading content form URL\n",
+        "from langchain_community.document_loaders import PyPDFLoader\n",
+        "\n",
         "# perform chunking on web_content using recursive text splitter\n",
         "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
         "text_splitter = RecursiveCharacterTextSplitter(\n",
@@ -455,6 +456,10 @@
         "    chunk_overlap  = 100,\n",
         "    length_function = len,\n",
         ")\n",
+        "\n",
+        "from langchain_core.prompts import ChatPromptTemplate\n",
+        "\n",
+        "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
         "\n",
         "# create faiss db and dump vecotrs\n",
         "from langchain.vectorstores import FAISS\n",
@@ -476,24 +481,20 @@
         "  #user_input = state[\"user_input\"]\n",
         "  pdfLoader = PyPDFLoader(file_path='/content/sample_report_ramesh.pdf')\n",
         "\n",
-        "  chunks = text_splitter.split_documents(pdfLoader.load())\n",
+        "  chunks = text_splitter.split_documents(pdfLoader)\n",
         "\n",
-        "  db = FAISS.from_documents(chunks, embeddings)\n",
-        "  db.save_local(\"faiss_index\")\n",
+        "  prompt = ChatPromptTemplate.from_messages([(\"system\",\n",
+        "                                              \"Write a concise summary of the following:\\n\\n{context}\")])\n",
+        "  summarize_chain = create_stuff_documents_chain(llm, prompt)\n",
         "\n",
-        "  retriver = db.as_retriever()\n",
-        "\n",
-        "  retriver.invoke(\"get diagnosis in breif\")\n",
-        "\n",
-        "  print(docs)\n",
-        "\n",
-        "  return docs\n",
-        "\n"
+        "  summaryReport = summarize_chain.invoke({\"context\": state[\"docs\"]})\n",
+        "  print(summaryReport)\n",
+        "  return {\"messages\":[{\"role\":\"assistant\",\"content\":summaryReport}]}\n"
       ],
       "metadata": {
         "id": "aECTFqj5DI4J"
       },
-      "execution_count": 87,
+      "execution_count": 1,
       "outputs": []
     },
     {
