--- a/Day5_CaseStudy_BankingFeedback.ipynb
+++ b/Day5_CaseStudy_BankingFeedback.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJpra/Np4KJhxzjDLgUMFV",
+      "authorship_tag": "ABX9TyMVCKKEuIpmVnIFZ+uPnnYe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -353,7 +353,6 @@
         "  results_to_save = state.get(\"processed_results\", \"No results to save.\")\n",
         "  # Generate a random integer between 1 and 10 (inclusive)\n",
         "  random_integer = random.randint(1, 10000)\n",
-        "  print(random_integer)\n",
         "  with open(file_path, 'a') as file:\n",
         "    result = \"We're sorry to hear that. A new ticket has been created #\"+str(random_integer)\n",
         "    newCase = \"\\n\"+str(random_integer)+\":In Progress\"\n",
@@ -364,7 +363,7 @@
       "metadata": {
         "id": "eBJT--qqKWhY"
       },
-      "execution_count": 169,
+      "execution_count": 221,
       "outputs": []
     },
     {
@@ -374,19 +373,25 @@
         "\n",
         "def status_ticket(state):\n",
         "  user_input = state[\"user_input\"]\n",
-        "  ticketNo = re.findall(r'\\d+', user_input)\n",
-        "  #context = state[\"messages\"][-1].content\n",
+        "  ticketNo = re.findall(r'\\d+', user_input)[0]\n",
         "  file_path = \"/content/Ticket.txt\"\n",
         "  with open(file_path, \"r\") as file:\n",
         "        for line in file:\n",
-        "            print(line.strip())\n",
+        "            ticket = line.split(\":\")[0]\n",
+        "            print(ticket)\n",
+        "            # Extract the ticket number string from the list\n",
+        "            if ticketNo == ticket:\n",
+        "              result = f\"Thank you for being patient with us! Status of ticket is {ticket}. Our team is on top of it to resolve!\"\n",
+        "              break\n",
+        "            else:\n",
+        "              result = \"Ticket not found.\"\n",
         "\n",
-        "  return {\"messages\":[{\"role\":\"assistant\",\"content\":\"ooo\"}]}"
+        "  return {\"messages\":[{\"role\":\"assistant\",\"content\":result}]}"
       ],
       "metadata": {
         "id": "Vp_c2FSSJtZi"
       },
-      "execution_count": 172,
+      "execution_count": 218,
       "outputs": []
     },
     {
@@ -410,7 +415,7 @@
       "metadata": {
         "id": "iP-FKc-eJIVU"
       },
-      "execution_count": 173,
+      "execution_count": 215,
       "outputs": []
     },
     {
@@ -423,9 +428,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uxjLMxyJKLFl",
-        "outputId": "82d24992-65b5-4efa-a9fb-a9b1285ca32f"
+        "outputId": "5df531db-a975-4359-e48b-cee000033078"
       },
-      "execution_count": 174,
+      "execution_count": 216,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,8 +477,8 @@
     {
       "cell_type": "code",
       "source": [
-        "result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"Status of Ticket 5550\"}]})\n",
-        "print(result)\n",
+        "result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"It’s still not working, very disappointed”\"}]})\n",
+        "#print(result)\n",
         "result[\"messages\"][-1]"
       ],
       "metadata": {
@@ -481,29 +486,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lK7ucPnLKqIp",
-        "outputId": "a9de87d8-7773-4615-dcc7-162ec310ba50"
+        "outputId": "d9ea4027-5925-412e-8cfa-3b0dc7df8f88"
       },
-      "execution_count": 175,
+      "execution_count": 220,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "123456: resolved\n",
-            "928374: unresolved\n",
-            "524183: in-progress5550:In Progress\n",
-            "{'messages': [HumanMessage(content='Status of Ticket 5550', additional_kwargs={}, response_metadata={}, id='beb74e23-494a-465e-b388-f771b2f01f84'), AIMessage(content='ticket_status', additional_kwargs={}, response_metadata={}, id='124566f3-e8b4-464f-82f4-a5b701bbed6a'), AIMessage(content='ooo', additional_kwargs={}, response_metadata={}, id='dc9c1234-be57-480a-b810-efa939282814')], 'user_input': 'Status of Ticket 5550', 'message_type': 'ticket_status'}\n"
+            "8\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "AIMessage(content='ooo', additional_kwargs={}, response_metadata={}, id='dc9c1234-be57-480a-b810-efa939282814')"
+              "AIMessage(content=\"We're sorry to hear that. A new ticket has been created #8\", additional_kwargs={}, response_metadata={}, id='bf9d67e7-e2ca-4594-b5c1-e4e4d1567fe8')"
             ]
           },
           "metadata": {},
-          "execution_count": 175
+          "execution_count": 220
         }
       ]
     }
