--- a/Day5_CaseStudy_BankingFeedback.ipynb
+++ b/Day5_CaseStudy_BankingFeedback.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVCKKEuIpmVnIFZ+uPnnYe",
+      "authorship_tag": "ABX9TyPFIgr3ScVIS3g6gYglmqat",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "eBJT--qqKWhY"
       },
-      "execution_count": 221,
+      "execution_count": 222,
       "outputs": []
     },
     {
@@ -378,10 +378,10 @@
         "  with open(file_path, \"r\") as file:\n",
         "        for line in file:\n",
         "            ticket = line.split(\":\")[0]\n",
-        "            print(ticket)\n",
+        "            ticketStatus = line.split(\":\")[1]\n",
         "            # Extract the ticket number string from the list\n",
         "            if ticketNo == ticket:\n",
-        "              result = f\"Thank you for being patient with us! Status of ticket is {ticket}. Our team is on top of it to resolve!\"\n",
+        "              result = f\"Thank you for being patient with us! Status of ticket is {ticketStatus}. Our team is on top of it to resolve!\"\n",
         "              break\n",
         "            else:\n",
         "              result = \"Ticket not found.\"\n",
@@ -391,7 +391,7 @@
       "metadata": {
         "id": "Vp_c2FSSJtZi"
       },
-      "execution_count": 218,
+      "execution_count": 234,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "iP-FKc-eJIVU"
       },
-      "execution_count": 215,
+      "execution_count": 235,
       "outputs": []
     },
     {
@@ -428,9 +428,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uxjLMxyJKLFl",
-        "outputId": "5df531db-a975-4359-e48b-cee000033078"
+        "outputId": "235dd3e0-3569-4c79-88ab-90adb4493d9c"
       },
-      "execution_count": 216,
+      "execution_count": 236,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
     {
       "cell_type": "code",
       "source": [
-        "result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"It’s still not working, very disappointed”\"}]})\n",
+        "result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"What’s the status of ticket 3270”\"}]})\n",
         "#print(result)\n",
         "result[\"messages\"][-1]"
       ],
@@ -486,26 +486,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lK7ucPnLKqIp",
-        "outputId": "d9ea4027-5925-412e-8cfa-3b0dc7df8f88"
+        "outputId": "6cf5f9b9-64e9-4384-924e-4274d645e1ee"
       },
-      "execution_count": 220,
+      "execution_count": 238,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "8\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "AIMessage(content=\"We're sorry to hear that. A new ticket has been created #8\", additional_kwargs={}, response_metadata={}, id='bf9d67e7-e2ca-4594-b5c1-e4e4d1567fe8')"
+              "AIMessage(content='Thank you for being patient with us! Status of ticket is In Progress. Our team is on top of it to resolve!', additional_kwargs={}, response_metadata={}, id='794fecef-5c5b-44de-9f9b-7a49f531272d')"
             ]
           },
           "metadata": {},
-          "execution_count": 220
+          "execution_count": 238
         }
       ]
     }
