--- a/API_Documentation.ipynb
+++ b/API_Documentation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBKoPHC960HcQxyP6+K5tu",
+      "authorship_tag": "ABX9TyMSnemfxJ/o/14JcGNcDMWC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,7 +381,7 @@
         "  file_path = '/content/sequence_diagram.png'\n",
         "  img.save(file_path)\n",
         "  img.show()\n",
-        "  document.add_picture('image.png')\n",
+        "  document.add_picture(img)\n",
         "\n",
         "\n",
         "\n",
@@ -390,7 +390,7 @@
       "metadata": {
         "id": "Ri4yn7n0UBm6"
       },
-      "execution_count": 183,
+      "execution_count": 190,
       "outputs": []
     },
     {
@@ -420,12 +420,12 @@
         "  file_path = '/content/business_outcome_document.docx'\n",
         "  document.save(file_path)\n",
         "\n",
-        "  return {\"messages\": state[\"messages\"] + [{\"role\":\"assistant\",\"content\":\"Business Outcome generated.\"}], \"business_outcome_document_path\": file_path}"
+        "  return {\"messages\": state[\"messages\"] + [{\"role\":\"assistant\",\"content\":\"Business Outcome generated.\"}], \"business_outcome_document_path\": business_usecase_text}"
       ],
       "metadata": {
         "id": "Wr7CdQ7fUD9d"
       },
-      "execution_count": 184,
+      "execution_count": 189,
       "outputs": []
     },
     {
